Add Raptors button, fix score reset, add setup description text

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,13 @@
         </div>
 
         <div class="setup-section" id="setupSection">
+            <p class="setup-description">Welcome to the bird quiz! We will test your knowledge of different bird species by showing you three images of a bird and 
+                asking you to identify it. Choose a list of birds to start your quiz, or click Custom to paste in your own list.</p>
             <div class="quick-start">
                 <button class="quick-start-button" onclick="loadWashingtonBirds()">Washington Birds</button>
                 <button class="quick-start-button" onclick="loadBackyardBirds()">Common Backyard Birds</button>
                 <button class="quick-start-button" onclick="loadWaterfowl()">Waterfowl</button>
+                <button class="quick-start-button" onclick="loadRaptors()">Raptors</button>
                 <button class="quick-start-button custom-button" onclick="showCustomList()">Custom</button>
             </div>
             <div class="custom-csv" id="customListSection" style="display: none;">
