--- a/static/styles.css
+++ b/static/styles.css
@@ -37,6 +37,13 @@ h1 {
     border-radius: 5px;
 }
 
+.setup-description {
+    text-align: center;
+    color: #555;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
 .quick-start {
     text-align: center;
     margin-bottom: 20px;
